--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetAutograph.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetAutograph.cshtml
@@ -43,6 +43,7 @@
     <header class="hjc_header">
         <a href="/Personal/Set" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">设置签名</a>
+        <a href="javascript:;" id="btnsub" class="SX_A">完成</a>
     </header>
 
     <div class="Set_Box">
@@ -50,9 +51,7 @@
             <li><input type="text" id="autograph" value="@Model.Autograph" class="Bul1_iptA"><i class="Bul1_del"></i></li>
         </ul>
     </div>
-    <div class="DL_info2">
-        <input type="button" id="btnsub" class="DL_if2btn" value="提交">
-    </div>
+  
 
 </body>
 </html>
