--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetSex.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetSex.cshtml
@@ -53,6 +53,7 @@
     <header class="hjc_header">
         <a href="/Personal/Set" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">设置性别</a>
+        <a href="javascript:;" id="btnsub" class="SX_A">完成</a>
     </header>
 
     <div class="Set_Box">
@@ -83,9 +84,6 @@
        
          </ul>
     </div>
-    <div class="DL_info2">
-        <input type="button" id="btnsub" class="DL_if2btn" value="提交">
-    </div>
-
+ 
 </body>
 </html>
