--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
@@ -96,8 +96,8 @@
                            string mid = "mescroll" + item.Id;
                            string did = "datalist" + item.Id;
 
-                       <div id="@mid" class="list_mainUl2 gues_info" >
-                        <div id="@did">
+                       <div id="@mid" class="list_mainUl2 gues_info mescroll" >
+                        <div id="@did" class="data-list">
 
             </div>
                </div>
@@ -116,8 +116,8 @@
     <script type="text/javascript">
         $(function () {
             var curNavIndex = 1;
-            var mescrollArr = new Array(17);
-            mescrollArr[curNavIndex] = initMescroll("mescroll1", "datalist1");
+             var mescrollArr = new Array(17);
+             mescrollArr[curNavIndex] = initMescroll("mescroll1", "datalist1");
 
             function pager(obj) {
                 var _this = $(obj),
@@ -149,14 +149,19 @@
                 }
             }
 
+
+          
+
+
             $(".hdNav_cai_lhs li").click(function () {
             
+                
                 pager($(this));
             });
 
             $(".hdNav_cai li").click(function () {
      
-                pager($(this));
+               pager($(this));
             });
 
 
