添加打赏，修复上来加载的问题

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
@@ -41,11 +41,11 @@
                     <li>
                         <dl class="Guse_CDL">
 
-                            <dt><a href="javascript:;"><img src="@Url.Content(Model.Avater)"></a></dt>
+                            <dt><a href="/Personal/UserCenter/@Model.UserId"><img src="@Url.Content(Model.Avater)"></a></dt>
                             <dd>
                                 <div class="CDL_DDTop">
                                     <h3>
-                                        <a href="javascript:;">@Model.NickName</a>
+                                        <a href="/Personal/UserCenter/@Model.UserId">@Model.NickName</a>
                                     </h3>
                                     <p>@Model.SubTime.ToString("yyyy-MM-dd HH:mm")</p>
                                 </div>
@@ -149,10 +149,10 @@
             $.each(data.PageData, function(index, value) {
                 var li = '<li>'
                     + '<dl class="Guse_CDL">'
-                    + '<dt><a href="javascript:;"><img src="' + (value.Avater.length <= 0 ? '/images/default_avater.png' : value.Avater) + '"></a></dt>'
+                    + '<dt><a href="/Personal/UserCenter/' + value.UserId + '"><img src="' + (value.Avater.length <= 0 ? '/images/default_avater.png' : value.Avater) + '"></a></dt>'
                     + '<dd>'
                     + ' <div class="CDL_DDTop">'
-                    + '<h3><a href="javascript:;">' + value.NickName + '</a></h3>'
+                    + '<h3><a href="/Personal/UserCenter/' + value.UserId + '">' + value.NickName + '</a></h3>'
                     + '<p>' + value.SubTimeStr + '</p>'
                     + ' </div>'
                     + '<div class="CDL_DDFont">';
