--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -62,6 +62,7 @@
         <header class="hjc_header">
             <a href="javascript:history.go(-1);" class="hjc_back"></a>
             <a href="javascript:;" class="hjc_logo">@Model.TypeName</a>
+            <a href="/Home/Index" class="hjc_home_right"></a>
         </header>
     }
     else
@@ -69,6 +70,7 @@
         <header class="hjc_header">
             <a href="javascript:history.go(-1);" class="hjc_back"></a>
             <a href="javascript:;" class="hjc_logo">@Model.TypeName<span class="select_sign"></span></a>
+            <a href="/Home/Index" class="hjc_home_right"></a>
         </header>
 
         <div class="hjc_hdNav fixed" style="display: none">
