--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
@@ -26,11 +26,11 @@
                     <li>
                         <dl class="Guse_CDL">
 
-                            <dt><a href="javascript:;"><img src="@Url.Content(comment.Avater)"></a></dt>
+                            <dt><a href="/Personal/UserCenter/@comment.UserId"><img src="@Url.Content(comment.Avater)"></a></dt>
                             <dd>
                                 <div class="CDL_DDTop">
                                     <h3>
-                                        <a href="javascript:;">@comment.NickName</a>
+                                        <a href="/Personal/UserCenter/@comment.UserId">@comment.NickName</a>
                                     </h3>
                                     <p>@comment.SubTime.ToString("yyyy-MM-dd HH:mm")</p>
                                 </div>
