--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -809,7 +809,7 @@
                 itemHtml += '</div>'
                     + '<div class="KL_port f-l">'
                     + '<div class="port_tu">'
-                    + '<a href="javascript:;"><img src="' + item.Avater + '"></a>'
+                    + '<a href="/Plan/PlayRecord/'+item.lType+'?uid='+item.UserId+'"><img src="' + item.Avater + '"></a>'
                     + '</div>';
                 if (item.RowNumber <= 3) {
                     itemHtml += '<i class="port_sf"><img src="/images/66.png"></i>';
