--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Tip.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Tip.cshtml
@@ -1,8 +1,10 @@
 ﻿@using C8.Lottery.Model
+@using C8.Lottery.Portal.Models
 @{
     Layout = null;
     SiteSetting site = ViewBag.SiteSetting;
 }
+@model List<TipRecordModel>
 
 <!DOCTYPE html>
 
@@ -13,8 +15,10 @@
     <title>打赏记录</title>
     <meta name="keywords" content="@site.KeyWord">
     <meta name="description" content="@site.Description">
+    <link rel="stylesheet" type="text/css" href="/css/dialog.css" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <script type="text/javascript" src="/js/jquery.js"></script>
+    <script type="text/javascript" src="/js/dialog.min.js"></script>
     <script type="text/javascript" src="/js/yjp.js"></script>
     <script type="text/javascript" src="/js/luo/plan.js"></script>
 </head>
@@ -36,119 +40,62 @@
                         <li data-val="500"><a href="javascript:;">500金币</a></li>
                         <li data-val="1000"><a href="javascript:;">1000金币</a></li>
                     </ul>
-                    <div style="clear:both;"></div>
+                    <div style="clear: both;"></div>
                 </div>
                 <div class="Recharge_if1K3">
                     <p class="if1K3_Lp f-l">打赏金币：</p>
                     <p class="if1K3_Rp f-r">金币</p>
                     <div class="if1K3_text">
-                        <input id="coinVal" name="coinVal" type="text" placeholder="最低打赏10金币" value="10">
+                        <input type="hidden" id="planId" value="@ViewBag.PlanId" />
+                        <input id="coinVal" name="coinVal" type="number" placeholder="最低打赏10金币" value="20">
                     </div>
                 </div>
             </div>
-            <button class="Set_btnMM">打赏</button>
+            <button id="btnGift" class="Set_btnMM">打赏</button>
         </div>
         <div class="Enjoy_content">
             <div class="Enjoy_Ctitlt">
                 <h3><i></i><span>近期打赏记录</span></h3>
             </div>
-            <div class="details_info1">
-                <dl class="details_DL">
-                    <dt><a href="javascript:;"><img src="/images/44_5.png"></a></dt>
-                    <dd>
-                        <div class="details_ddRight"><p><span>10000</span></p></div>
-                        <div class="details_ddLeft">
-                            <h3><a href="javascript:;">刘德华</a></h3>
-                            <p>2017-09-12  19:09:35</p>
-                        </div>
-                    </dd>
-                </dl>
-                <dl class="details_DL">
-                    <dt><a href="javascript:;"><img src="/images/44_6.png"></a></dt>
-                    <dd>
-                        <div class="details_ddRight"><p><span>10000</span></p></div>
-                        <div class="details_ddLeft">
-                            <h3><a href="javascript:;">张学友</a></h3>
-                            <p>2017-09-12  19:09:35</p>
-                        </div>
-                    </dd>
-                </dl>
-                <dl class="details_DL">
-                    <dt><a href="javascript:;"><img src="/images/44_7.png"></a></dt>
-                    <dd>
-                        <div class="details_ddRight"><p><span>10000</span></p></div>
-                        <div class="details_ddLeft">
-                            <h3><a href="javascript:;">郭富城</a></h3>
-                            <p>2017-09-12  19:09:35</p>
-                        </div>
-                    </dd>
-                </dl>
-                <dl class="details_DL">
-                    <dt><a href="javascript:;"><img src="/images/44_5.png"></a></dt>
-                    <dd>
-                        <div class="details_ddRight"><p><span>10000</span></p></div>
-                        <div class="details_ddLeft">
-                            <h3><a href="javascript:;">刘德华</a></h3>
-                            <p>2017-09-12  19:09:35</p>
-                        </div>
-                    </dd>
-                </dl>
-                <dl class="details_DL">
-                    <dt><a href="javascript:;"><img src="/images/44_6.png"></a></dt>
-                    <dd>
-                        <div class="details_ddRight"><p><span>10000</span></p></div>
-                        <div class="details_ddLeft">
-                            <h3><a href="javascript:;">张学友</a></h3>
-                            <p>2017-09-12  19:09:35</p>
-                        </div>
-                    </dd>
-                </dl>
-                <dl class="details_DL">
-                    <dt><a href="javascript:;"><img src="/images/44_7.png"></a></dt>
-                    <dd>
-                        <div class="details_ddRight"><p><span>10000</span></p></div>
-                        <div class="details_ddLeft">
-                            <h3><a href="javascript:;">郭富城</a></h3>
-                            <p>2017-09-12  19:09:35</p>
-                        </div>
-                    </dd>
-                </dl>
-                <dl class="details_DL">
-                    <dt><a href="javascript:;"><img src="/images/44_5.png"></a></dt>
-                    <dd>
-                        <div class="details_ddRight"><p><span>10000</span></p></div>
-                        <div class="details_ddLeft">
-                            <h3><a href="javascript:;">刘德华</a></h3>
-                            <p>2017-09-12  19:09:35</p>
-                        </div>
-                    </dd>
-                </dl>
-                <dl class="details_DL">
-                    <dt><a href="javascript:;"><img src="/images/44_6.png"></a></dt>
-                    <dd>
-                        <div class="details_ddRight"><p><span>10000</span></p></div>
-                        <div class="details_ddLeft">
-                            <h3><a href="javascript:;">张学友</a></h3>
-                            <p>2017-09-12  19:09:35</p>
-                        </div>
-                    </dd>
-                </dl>
-                <dl class="details_DL">
-                    <dt><a href="javascript:;"><img src="/images/44_7.png"></a></dt>
-                    <dd>
-                        <div class="details_ddRight"><p><span>10000</span></p></div>
-                        <div class="details_ddLeft">
-                            <h3><a href="javascript:;">郭富城</a></h3>
-                            <p>2017-09-12  19:09:35</p>
-                        </div>
-                    </dd>
-                </dl>
-            </div>
+            @if (Model != null)
+            {
+                <div class="details_info1">
+                    @foreach (var item in Model)
+                    {
+                        <dl class="details_DL">
+                            <dt>
+                                <a href="/Personal/UserCenter/@item.UserId">
+                                    @if (string.IsNullOrEmpty(item.Avater))
+                                    {
+                                        <img src="/images/default_avater.png" alt="" />
+                                    }
+                                    else
+                                    {
+                                        <img src="@item.Avater" alt="" />
+                                    }
+                                </a>
+                            </dt>
+                            <dd>
+                                <div class="details_ddRight">
+                                    <p><span>@item.Money</span></p>
+                                </div>
+                                <div class="details_ddLeft">
+                                    <h3>
+                                        <a href="/Personal/UserCenter/@item.UserId">@item.Name</a>
+                                    </h3>
+                                    <p>@item.SubTimeStr</p>
+                                </div>
+                            </dd>
+                        </dl>
+
+                    }
+                </div>
+            }
         </div>
     </div>
 
     <div class="Enjoy_footer">
-        <h3>当前打赏总金币：<span>100000</span></h3>
+        <h3>当前打赏总金币：<span>@ViewBag.TotalTip</span></h3>
     </div>
 
 </body>
