--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -6674,6 +6674,12 @@ a {
 }
 
 
+.position-right {
+    right: 0 !important;
+}
+.position-left {
+    right: 0 !important;
+}
 /***Mask**/
 
 .mask {
@@ -8106,6 +8112,15 @@ footer {
     background: url(../images/02.png) no-repeat center;
     background-size: 50%;
 }
+.hjc_home_right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    background: url(../images/02.png) no-repeat center;
+    background-size: 50%;
+}
 
 /***参与竞猜**/
 
@@ -8227,6 +8242,11 @@ footer {
 .CDL_DDFont .include {
     color: #166cec;
     padding-right: 10px;
+}
+.CDL_DDFont p {
+    -moz-word-break: break-all;
+    -o-word-break: break-all;
+    word-break: break-all;
 }
 
 .emoji_icon {
