--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/GetIntegralRule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/GetIntegralRule.cshtml
@@ -33,7 +33,7 @@
         <!--六合彩-->
         <div class="Grades_CBox">
             <!--全部-->
-            <div class="Grades_CBInfo" >
+            <div class="Grades_CBInfo" style="height:100%" >
             @if (IntegralRuleList.Count > 0)
             {
                 string mid = Pid.ToString() + ltype.ToString() + "0";
