--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
@@ -23,7 +23,7 @@
 
 </head>
 
-<body style="background:#eee;">
+<body style="background:#eee;overflow:hidden;">
 
     <header class="hjc_header">
         <a href="/Personal/Index" class="hjc_back"></a>
@@ -70,8 +70,8 @@
         </div>
     </div>
 
-    <div class="sion_content">
-        <div class="sion_conInfo">
+    <div class="sion_content" >
+        <div class="sion_conInfo" style="height:100%;">
             <div id="mescroll" class="mescroll">
             
                 <div id="dataList" class="data-list">
