--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="~/js/yjp.js"></script>
 </head>
 
-<body style="background:#F4F4F5;">
+<body style="background:#F4F4F5;overflow:hidden;">
 
     <header class="hjc_header">
         <a href="/Personal/Index" class="hjc_back"></a>
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <div class="guessing_content hjc_indexmain" style="margin-top:90px;">
+    <div class="guessing_content hjc_indexmain" style="margin-top:90px;height:100%">
         
     
        @if (Model != null)
