修复计划总成绩打赏问题

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
 </head>
 <body>
     <header class="hjc_header" style="text-align:left;">
-        <a href="javascript:;" class="hjc_logo" style="margin-left: 10px;"><img src="/images/03.png"></a>
+        <a href="javascript:;" class="home_logo"><img src="/images/03.png"></a>
         <div class="hjc_hdDZ">
             @if (user == null)
             {
