--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
@@ -26,7 +26,7 @@
 <body style="background:#F4F4F5;">
 
     <header class="hjc_header">
-        <a href="/Personal" class="hjc_back"></a>
+        <a href="/Personal/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">设置</a>
     </header>
     <form action="/Personal/logOut" method="post">
