--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/GetIntegralRule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/GetIntegralRule.cshtml
@@ -6,34 +6,29 @@
 }
 
 
+<div class="Grades_TopNav">
+    <!--六合彩-->
+    <ul class="Grades_TNul" id="gul_@ltype">
 
-
-
-
-
-    <div class="Grades_TopNav">
-        <!--六合彩-->
-        <ul class="Grades_TNul" id="gul_@ltype">
-
-            @if (IntegralRuleList.Count > 0)
+        @if (IntegralRuleList.Count > 0)
             {
                 string idx = Pid.ToString() + ltype.ToString() + "0";
-                <li data-name="全部"  data-ltype="@ltype" data-idx="@idx" class="current"><a href="javascript:;">全部</a></li>
-                foreach (var item in IntegralRuleList)
-                {
-                    string idxs = Pid.ToString() + ltype.ToString() + item.Id.ToString();
-                    <li data-idx="@idxs" data-ltype="@ltype" data-name="@item.PlayName"><a href="javascript:;">@item.PlayName</a></li>
-                }
-
+            <li data-name="全部" data-ltype="@ltype" data-idx="@idx" class="current"><a href="javascript:;">全部</a></li>
+            foreach (var item in IntegralRuleList)
+            {
+                string idxs = Pid.ToString() + ltype.ToString() + item.Id.ToString();
+                <li data-idx="@idxs" data-ltype="@ltype" data-name="@item.PlayName"><a href="javascript:;">@item.PlayName</a></li>
             }
 
-        </ul>
-    </div>
-    <div class="Grades_content" >
-        <!--六合彩-->
-        <div class="Grades_CBox">
-            <!--全部-->
-            <div class="Grades_CBInfo" style="height:100%" >
+        }
+
+    </ul>
+</div>
+<div class="Grades_content">
+    <!--六合彩-->
+    <div class="Grades_CBox">
+        <!--全部-->
+        <div class="Grades_CBInfo" style="height:100%;">
             @if (IntegralRuleList.Count > 0)
             {
                 string mid = Pid.ToString() + ltype.ToString() + "0";
@@ -60,6 +55,6 @@
 
             }
 
-          </div>
         </div>
     </div>
+</div>
