--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
@@ -39,7 +39,7 @@
         <div style="clear:both;"></div>
     </div>
 
-    <div class="details_box mescroll-wrapper" style="height: 100%;">
+    <div class="details_box mescroll-wrapper" style="height: calc(100% - 100px);">
         <div class="details_info mescroll" id="mescroll0">
             <div id="datalist0" class="data-list">
                 
