--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
@@ -71,7 +71,7 @@
             <img src="/images/62_1.png">
             <font>@ViewBag.CommentTotalCount</font>
         </a>
-        <a href="javascript:showShare();" class="ftTB_A ShareBtn"><img src="/images/62_2.png"></a>
+        @*<a href="javascript:showShare();" class="ftTB_A ShareBtn"><img src="/images/62_2.png"></a>*@
     </div>
     <a href="/Comment/Index/@ViewBag.ArticleId?ctype=1&type=@ViewBag.Type" class="Gues_ftFBPL">请输入您的评论</a>
 </div>
